<resources>
    <string name="app_name">MyPic</string>

    <!-- USER -->
    <string name="user_default_name">Guest</string>

    <!-- MENU STRING -->
    <string name="selected_menu_delete_text">Delete</string>
    <string name="selected_menu_check_all_text">Select all</string>
    <string name="selected_menu_clear_all_text">Clear Selection</string>

    <!-- ADD ACTIVITY -->
    <string name="add_activity_public_checkbox_text">Set this picture public?</string>
    <string name="add_activity_upload_progress">%1$d%%</string>
    <string name="add_activity_cancel_button_text">Cancel</string>
    <string name="add_activity_description">Description</string>

    <!-- DETAIL ACTIVITY -->
    <string name="detail_activity_description">Description :</string>
    <string name="detail_activity_comment_hint">Add a comment…</string>
    <string name="detail_activity_chip_public_text">Public</string>
    <string name="detail_activity_chip_private_text">Private</string>
    <string name="detail_activity_success_toggle_visibility">Successfully change your picture visibility!</string>

    <string name="detail_activity_error_retrieving_document_uid">An error occurred, unable to retrieve this picture. Please try again</string>
    <string name="detail_activity_error_sending_comment">Unable to send your comment, please try again</string>
    <string name="detail_activity_error_retrieving_comments">Unable to retrieve comments, please try again</string>
    <string name="detail_activity_error_toggle_visibility">Unable to change visibility, please try again later</string>
    <string name="detail_activity_error_already_deny_by_moderation">Unable to change visibility. This picture already been deny by moderation!</string>
    <string name="detail_activity_error_reporting_comment">Unable to retrieve comment\'s detail, please try again later</string>

    <!-- HOME FRAGMENT -->
    <string name="home_fragment_error_retrieving_data">An error occurred, unable to retrieve pictures. Please try again</string>
    <string name="home_fragment_error_getting_picture_detail">An error occurred, unable to retrieve picture\'s details. Please try again later</string>

    <!-- MAP FRAGMENT -->
    <string name="map_fragment_no_result_message">An error occurred, unable to retrieve pictures. Please try again
    </string>

    <!-- PROFILE FRAGMENT -->
    <string name="profile_fragment_sign_out">Sign Out</string>

    <!-- MY PIC FRAGMENT -->
    <string name="my_pic_fragment_no_image_yet">You have not taken any pictures yet</string>
    <string name="my_pic_fragment_action_bar_text">Selected : %1$d / %2$d</string>

    <string name="my_pic_fragment_too_much_image_to_delete">You can\'t delete more than %1$d pictures at a time</string>

    <!-- MODERATION FRAGMENT -->
    <string name="moderation_fragment_nothing_to_do_message">There is nothing to do for now</string>
    <string name="moderation_fragment_button_accept">Accept</string>
    <string name="moderation_fragment_button_deny">Deny</string>
    <string name="moderation_fragment_item_count">%1$d / %2$d</string>
    <string name="moderation_fragment_title_comments">Comment</string>
    <string name="moderation_fragment_title_pictures">Pictures</string>

    <string name="moderation_text_replace">This comment has been moderated!</string>

    <!-- MODERATION COMMENT FRAGMENT -->
    <string name="moderation_comment_reminder_text"><u>Please keep in mind :</u>\nPicture is here to help you understand comment\'s context. You <b>don\'t moderate picture</b>, only comment!</string>

    <!-- PICTURE BOTTOM SHEET -->
    <string name="picture_bottom_sheet_image_nudity_text">IMAGE NUDITY</string>
    <string name="picture_bottom_sheet_image_violence_text">IMAGE VIOLENCE</string>
    <string name="picture_bottom_sheet_text_racism_text">TEXT RACISM</string>
    <string name="picture_bottom_sheet_text_vulgar_text">TEXT VULGAR</string>

    <!-- MODAL FRAGMENT -->
    <string name="modal_fragment_report_text">Report</string>
    <string name="modal_fragment_user_already_report">You already report this comment, thanks for you help!</string>
    <string name="modal_fragment_user_report_success">Thanks for reporting this comment!</string>

    <!-- PROFILE FRAGMENT -->
    <string name="profile_fragment_sign_out_title">Confirmation</string>
    <string name="profile_fragment_sign_out_message">Do you really want to sign out?</string>
    <string name="profile_fragment_sign_out_positive_button">Yes</string>
    <string name="profile_fragment_sign_out_negative_button">No</string>

    <string name="profile_fragment_username_title">Modification</string>
    <string name="profile_fragment_username_message">What is your new username?</string>
    <string name="profile_fragment_username_positive_button">Validate</string>
    <string name="profile_fragment_username_negative_button">Cancel</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_view_home">Home</string>
    <string name="bottom_navigation_view_map">Map</string>
    <string name="bottom_navigation_view_my_pic">My Pic</string>
    <string name="bottom_navigation_view_profile">Profile</string>
    <string name="bottom_navigation_view_moderation">Moderation</string>

    <!-- AUTH ERROR -->
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error has occurred</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
